styles.css
/* Global CSS */

body{
    background-color: #F2E0D5;
    color: #352F59;
    margin: 0;
    padding: 0;
}

h1{
    font-family: "filson-soft", sans-serif;
	font-weight: 700;
	font-style: normal;
}

/* End of Global CSS */

/* Custom Navbar/Header CSS */

.nav-link-color {
    color: white;
    background-color: #A6496B;
    margin-left: 5px;
    margin-right: 5px;
    margin-top: 5px;
    margin-bottom: 5px;
    border-radius: 5px;
}

.nav-link-color:hover {    
    color: #352f59;
    background-color: #f2e0d5;
    text-decoration: underline;
}

.nav-link-text {
    padding-left: 10px;
    padding-right: 10px;
    font-family: "filson-soft", sans-serif;
	font-weight: 400;
	font-style: normal;
}

.raina-logo {
    max-height: 80px;
    height: 100%;
}

@media (max-width: 425px) {
    .raina-logo{
        max-height: 60px;
        height: 100%;
    }

    h1{
        font-family: "filson-soft", sans-serif;
        font-weight: 700;
        font-style: normal;
        font-size: 24px;
    }
}

@media (max-width: 375px) {
    .raina-logo{
        max-height: 40px;
        height: 100%;
    }

    h1{
        font-family: "filson-soft", sans-serif;
        font-weight: 700;
        font-style: normal;
        font-size: 20px;
    }
}

.navbar-bg-color{
    background-color: #F2C4B3;
}

.raina-name {
    text-decoration: none;
    color: #352F59;
}

/* End of Custom Navbar/Header CSS */

/* Custom Body CSS */

/* intro */
.raina-headshot {
    width: 100%;
    border-radius: 5px;
}

.intro-container {
    margin-top: 20px;
    font-family: "filson-soft", sans-serif;
	font-weight: 500;
	font-style: normal;
}

.intro-h2{
    font-size: 60px;
}

@media (max-width: 320px) {
    .intro-h2{
        font-size: 50px;
    }
}

.intro-p{
    font-size: 24px;
}

/* works */
.works-title {
    margin: 0;
    padding-bottom: 40px;
    padding-left: 20px;
    font-size: 50px;
}
.works-bg-color {
    background-color: #F2BB9B;
    color: #352F59;
    font-family: "filson-soft", sans-serif;
}

.works-bg-color-2 {
    background-color: #352F59;
    color: #F2E0D5;
    font-family: "filson-soft", sans-serif;
}

.works-bg-color-3 {
    background-color: #F2E0D5;
    color: #352F59;
}

.works-img {
    width: 100%;
    max-width: 100%;
    border-radius: 5px;
}

.works-row-top {
    padding-top: 0;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 40px;
    font-family: "filson-soft", sans-serif;
	font-weight: 400;
	font-style: normal;
    font-size: 22px;
}

.works-row {
    padding-top: 40px;
    padding-bottom: 40px;
    font-family: "filson-soft", sans-serif;
	font-weight: 400;
	font-style: normal;
    font-size: 22px;
}
.tools{
    font-size:medium;
    margin-top: 40px;
}

.works-button-1 {
    border: 1px solid black;
    background-color: black;
    color: white;
    text-decoration: none;
    border-radius: 5px;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 20px;
    padding-right: 20px;
}

.works-button-1:hover {
    border: 1px solid white;
    background-color: white;
    color: black;
}

/* start of project example css */
.works-example-row {
    /* padding-top: 40px; */
}

.works-example-row-bottom {
    padding-bottom: 40px;
}

.works-example-card {
    margin-top: 20px;
}
/* end of project example css */
/* End of Custom Body CSS */

/* Start of Footer CSS */
@media (min-width: 768px) {
    .footer-contact-info {
        text-align: center;
    }
    
    .social-media-links {
        text-align: right;
    }    
}

.footer-icons{
    color: #352f59;
}

small{
    font-size: 16px;
}
/* End of Footer CSS */

